git commit layer2

--- a/TaxiDoor.Service/TaxiDoor.Service.csproj
+++ b/TaxiDoor.Service/TaxiDoor.Service.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TaxiDoor.Data\TaxiDoor.Data.csproj" />
+    <ProjectReference Include="..\TaxiDoor.Persistance\TaxiDoor.Persistance.csproj" />
+  </ItemGroup>
+
 </Project>
